update form action

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <body>
     <content>
         <span onclick="window.location.assign(window.location.origin)">ACover</span>
-        <form action="/print.html">
+        <form action="print.html">
             <div>
                 <input required="" type="text" name="cc" placeholder="Course Code">
                 <input required="" type="text" name="cn" placeholder="Course Name">
