--- a/print.html
+++ b/print.html
@@ -67,6 +67,7 @@
         </table>
         <span name="sn" placeholder="Student Name"></span>
         <span name="sc" placeholder="Student Code"></span>
+        <span name="si" placeholder="Student ID No."></span>
         <div class="three">
             <span name="sb" placeholder="Student Batch"></span>
             <span name="ss" placeholder="Course Section"></span>
@@ -75,7 +76,8 @@
         <span name="dn" placeholder="Department Name"></span>
         <span name="un" placeholder="University Name"></span>
     </content>
+    <span class="no-select" id="print">Print to PDF</span>
     <script type="text/javascript" src="scripts/getvar.min.js"></script>
-    <script type="text/javascript" src="scripts/gethome.min.js"></script>
+    <script type="text/javascript" src="scripts/print.min.js"></script>
 </body>
 </html>
