--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <meta name="HandheldFriendly" content="true">
    <meta name="description" content="ACover lets you print cover pages for school, college, or university assignments.">
    <meta name="author" content="ACover">
-   <link rel="canonical" href="https://naeembolchhi.github.io/ACover/">
+   <link rel="canonical" href="https://naeembolchhi.github.io/acover/">
 
    <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="app/180.png">
    <link rel="icon" type="image/png" sizes="32x32" href="app/32.png">
@@ -25,14 +25,14 @@
 
    <!-- <link rel="stylesheet" type="text/css" href="styles/fontasm.css"> -->
    <link rel="stylesheet" type="text/css" href="styles/cascadiacode.min.css">
-   <link rel="stylesheet" type="text/css" href="styles/main.css">
+   <link rel="stylesheet" type="text/css" href="styles/main.min.css">
    <!-- <link rel="stylesheet" type="text/css" href="styles/print.css"> -->
 
    <meta property="og:site_name" content="ACover">
    <meta property="og:title" content="ACover">
    <meta property="og:type" content="website">
-   <meta property="og:url" content="https://naeembolchhi.github.io/ACover/">
-   <meta property="og:image" content="https://naeembolchhi.github.io/ACover/app/ograph.png?20241122211704">
+   <meta property="og:url" content="https://naeembolchhi.github.io/acover/">
+   <meta property="og:image" content="https://naeembolchhi.github.io/acover/app/ograph.png?20241122211704">
    <meta property="og:image:type" content="image/png">
    <meta property="og:image:width" content="1200">
    <meta property="og:image:height" content="1200">
@@ -40,7 +40,7 @@
    <meta property="og:description" content="ACover lets you print cover pages for school, college, or university assignments.">
 
    <meta name="twitter:title" content="ACover">
-   <meta name="twitter:image" content="https://naeembolchhi.github.io/ACover/app/twitter.png?20241122211704">
+   <meta name="twitter:image" content="https://naeembolchhi.github.io/acover/app/twitter.png?20241122211704">
    <meta name="twitter:card" content="summary_large_image">
 </head>
 <body>
