--- a/print.html
+++ b/print.html
@@ -7,7 +7,7 @@
    <meta name="HandheldFriendly" content="true">
    <meta name="description" content="ACover lets you print cover pages for school, college, or university assignments.">
    <meta name="author" content="ACover">
-   <link rel="canonical" href="https://naeembolchhi.github.io/ACover/">
+   <link rel="canonical" href="https://naeembolchhi.github.io/acover/">
 
    <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="app/180.png">
    <link rel="icon" type="image/png" sizes="32x32" href="app/32.png">
@@ -26,13 +26,13 @@
    <!-- <link rel="stylesheet" type="text/css" href="styles/fontasm.css"> -->
    <link rel="stylesheet" type="text/css" href="styles/cascadiacode.min.css">
    <!-- <link rel="stylesheet" type="text/css" href="styles/main.css"> -->
-   <link rel="stylesheet" type="text/css" href="styles/print.css">
+   <link rel="stylesheet" type="text/css" href="styles/print.min.css">
 
    <meta property="og:site_name" content="ACover">
    <meta property="og:title" content="ACover">
    <meta property="og:type" content="website">
-   <meta property="og:url" content="https://naeembolchhi.github.io/ACover/">
-   <meta property="og:image" content="https://naeembolchhi.github.io/ACover/app/ograph.png?20241122211704">
+   <meta property="og:url" content="https://naeembolchhi.github.io/acover/">
+   <meta property="og:image" content="https://naeembolchhi.github.io/acover/app/ograph.png?20241122211704">
    <meta property="og:image:type" content="image/png">
    <meta property="og:image:width" content="1200">
    <meta property="og:image:height" content="1200">
@@ -40,16 +40,16 @@
    <meta property="og:description" content="ACover lets you print cover pages for school, college, or university assignments.">
 
    <meta name="twitter:title" content="ACover">
-   <meta name="twitter:image" content="https://naeembolchhi.github.io/ACover/app/twitter.png?20241122211704">
+   <meta name="twitter:image" content="https://naeembolchhi.github.io/acover/app/twitter.png?20241122211704">
    <meta name="twitter:card" content="summary_large_image">
 </head>
 <body>
     <content>
-        <div class="one">
+        <div>
             <span name="cc" placeholder="Course Code"></span>
             <span name="cn" placeholder="Course Name"></span>
         </div>
-        <div class="two">
+        <div>
             <span name="tn" placeholder="Teacher Name"></span>
             <span name="tc" placeholder="Teacher Short Code"></span>
         </div>
@@ -68,7 +68,7 @@
         <span name="sn" placeholder="Student Name"></span>
         <span name="sc" placeholder="Student Code"></span>
         <span name="si" placeholder="Student ID No."></span>
-        <div class="three">
+        <div>
             <span name="sb" placeholder="Student Batch"></span>
             <span name="ss" placeholder="Course Section"></span>
         </div>
