--- a/index.html
+++ b/index.html
@@ -45,24 +45,28 @@
 </head>
 <body>
     <content>
-        <span id="logo">ACover</span>
+        <header>
+            <a href="/acover" id="logo">
+                <svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" x="0" y="0" version="1.1" viewBox="0 0 90 90"><path d="M54.1 11.3c.6-3.2 1.3-6.3 1.9-9.4h15.6V4c0 20.2.1 40.5-.1 60.7 0 4.5 1.7 7.9 5 10.7.8.7 1.6 1.3 2.5 2-4.8 4.1-9.5 8.1-14.3 12.3-4.3-3.5-7.4-7.9-10.2-12.5-2.8 2.5-5.5 5-8.4 7.3-2.1 1.7-4.5 3.2-6.8 4.6-2.3 1.4-4.7 1.2-6.9-.3-1.3-.8-2.6-1.6-3.7-2.6-3.7-3.6-7.4-7.2-11-11-4.1-4.3-6-9.6-6.4-15.5-.7-10.5-.8-21 .3-31.5.4-4.1 1.7-7.9 4.3-11.2 4.2-5.5 9-10.3 14.4-14.6 3.6-2.9 7.4-3.3 11.1-.6 3.8 2.7 7.5 5.6 11.2 8.4.5.3.9.7 1.5 1.1zm-3.3 33.9c-.3-5.6-.5-10.9-.7-16.1-.1-1.8-.5-3.5-2-4.5-2.1-1.5-4.2-2.9-6.4-4.1-1.8-1-3.5-.4-5 .9-2.7 2.4-4.3 5.4-4.7 9.1-1.1 9.1-1 18.3-.3 27.5.3 4.3 1.9 7.9 5.1 10.8 1.4 1.3 3.1 1.7 4.7.8 2.2-1.2 4.4-2.5 6.4-4.1.9-.8 1.7-2.2 1.8-3.4.5-5.8.8-11.5 1.1-16.9z"/></svg>
+            </a>
+        </header>
         <form action="print.html">
             <div>
-                <input required="" type="text" name="cc" placeholder="Course Code">
+                <input type="text" name="cc" placeholder="Course Code">
                 <input required="" type="text" name="cn" placeholder="Course Name">
             </div>
             <div>
                 <input required="" type="text" name="tn" placeholder="Teacher Name">
-                <input required="" type="text" name="tc" placeholder="Teacher Short Code">
+                <input type="text" name="tc" placeholder="Teacher Short Code">
                 <input required="" type="text" name="td" placeholder="Teacher Designation">
             </div>
             <div>
                 <input required="" type="text" name="ah" placeholder="Assignment Heading">
-                <input required="" type="text" name="at" placeholder="Assignment Topic">
+                <input type="text" name="at" placeholder="Assignment Topic">
             </div>
             <div>
                 <input required="" type="text" name="sn" placeholder="Student Name">
-                <div>
+                <div class="combo">
                     <span id="swap">Code</span>
                     <input id="swaptarget" required="" type="text" name="sc" placeholder="Student Code">
                 </div>
@@ -76,8 +80,12 @@
                 <input required="" type="text" name="dn" placeholder="Department Name">
                 <input required="" type="text" name="un" placeholder="University Name">
             </div>
-            <button>Generate Cover</button>
+            <input type="submit" value="Submit">
         </form>
+        <footer>
+            <span id="share">Copy Link</span>
+            <span id="generate">Generate</span>
+        </footer>
     </content>
     <script type="text/javascript" src="scripts/getvar.min.js"></script>
     <script type="text/javascript" src="scripts/home.min.js"></script>
