--- a/print.html
+++ b/print.html
@@ -55,16 +55,9 @@
         </div>
         <span name="td" placeholder="Teacher Designation"></span>
         <span name="ah" placeholder="Assignment Heading"></span>
-        <table>
-            <thead></thead>
-            <tbody>
-                <tr>
-                    <td>
-                        <span name="at" placeholder="Assignment Topic"></span>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+        <div class="outline">
+            <span name="at" placeholder="Assignment Topic"></span>
+        </div>
         <span name="sn" placeholder="Student Name"></span>
         <span name="sc" placeholder="Student Code"></span>
         <span name="si" placeholder="Student ID No."></span>
