added link sharing feature

--- a/index.html
+++ b/index.html
@@ -83,7 +83,11 @@
             <input type="submit" value="Submit">
         </form>
         <footer>
-            <span id="share">Copy Link</span>
+            <div id="share">
+                <span class="general">Copy Link</span>
+                <span class="fail">Failed!</span>
+                <span class="pass">Success!</span>
+            </div>
             <span id="generate">Generate</span>
         </footer>
     </content>
