--- a/index.html
+++ b/index.html
@@ -52,33 +52,33 @@
         </header>
         <form action="print.html">
             <div>
-                <input type="text" name="cc" placeholder="Course Code">
-                <input required="" type="text" name="cn" placeholder="Course Name">
+                <i><input type="text" name="cc"><label>Course Code</label></i>
+                <i><input required="" type="text" name="cn"><label>Course Name</label></i>
             </div>
             <div>
-                <input required="" type="text" name="tn" placeholder="Teacher Name">
-                <input type="text" name="tc" placeholder="Teacher Short Code">
-                <input required="" type="text" name="td" placeholder="Teacher Designation">
+                <i><input required="" type="text" name="tn"><label>Teacher Name</label></i>
+                <i><input type="text" name="tc"><label>Teacher Short Code</label></i>
+                <i><input required="" type="text" name="td"><label>Teacher Designation</label></i>
             </div>
             <div>
-                <input required="" type="text" name="ah" placeholder="Assignment Heading">
-                <input type="text" name="at" placeholder="Assignment Topic">
+                <i><input required="" type="text" name="ah"><label>Assignment Heading</label></i>
+                <i><input type="text" name="at"><label>Assignment Topic</label></i>
             </div>
             <div>
-                <input required="" type="text" name="sn" placeholder="Student Name">
+                <i><input required="" type="text" name="sn"><label>Student Name</label></i>
                 <div class="combo">
                     <span id="swap">Code</span>
-                    <input id="swaptarget" required="" type="text" name="sc" placeholder="Student Code">
+                    <i><input id="swaptarget" required="" type="text" name="sc"><label>Student Code</label></i>
                 </div>
-                <input required="" type="text" name="sb" placeholder="Student Batch">
-                <input required="" type="text" name="ss" placeholder="Course Section">
+                <i><input required="" type="text" name="sb"><label>Student Batch</label></i>
+                <i><input required="" type="text" name="ss"><label>Course Section</label></i>
             </div>
             <div>
-                <input required="" type="text" name="sd" placeholder="Date of Submission">
+                <i><input required="" type="text" name="sd"><label>Date of Submission</label></i>
             </div>
             <div>
-                <input required="" type="text" name="dn" placeholder="Department Name">
-                <input required="" type="text" name="un" placeholder="University Name">
+                <i><input required="" type="text" name="dn"><label>Department Name</label></i>
+                <i><input required="" type="text" name="un"><label>University Name</label></i>
             </div>
             <input type="submit" value="Submit">
         </form>
