--- a/print.html
+++ b/print.html
@@ -46,28 +46,29 @@
 <body>
     <content>
         <div>
-            <span name="cc" placeholder="Course Code"></span>
-            <span name="cn" placeholder="Course Name"></span>
+            <span name="cc" title="Course Code"></span>
+            <span name="cn" title="Course Name"></span>
         </div>
         <div>
-            <span name="tn" placeholder="Teacher Name"></span>
-            <span name="tc" placeholder="Teacher Short Code"></span>
+            <span name="tn" title="Teacher Name"></span>
+            <span name="tc" title="Teacher Short Code"></span>
         </div>
-        <span name="td" placeholder="Teacher Designation"></span>
-        <span name="ah" placeholder="Assignment Heading"></span>
+        <span name="td" title="Teacher Designation"></span>
+        <span name="ah" title="Assignment Heading"></span>
         <div class="outline">
-            <span name="at" placeholder="Assignment Topic"></span>
+            <span name="at" title="Assignment Topic"></span>
         </div>
-        <span name="sn" placeholder="Student Name"></span>
-        <span name="sc" placeholder="Student Code"></span>
-        <span name="si" placeholder="Student ID No."></span>
+        <span name="sn" title="Student Name"></span>
+        <span name="sc" title="Student Code"></span>
+        <span name="si" title="Student ID No."></span>
+        <span name="sr" title="Student Roll No."></span>
         <div>
-            <span name="sb" placeholder="Student Batch"></span>
-            <span name="ss" placeholder="Course Section"></span>
+            <span name="sb" title="Student Batch"></span>
+            <span name="ss" title="Course Section"></span>
         </div>
-        <span name="sd" placeholder="Date of Submission"></span>
-        <span name="dn" placeholder="Department Name"></span>
-        <span name="un" placeholder="University Name"></span>
+        <span name="sd" title="Date of Submission"></span>
+        <span name="dn" title="Department Name"></span>
+        <span name="un" title="University Name"></span>
     </content>
     <span class="no-select" id="print">Print to PDF</span>
     <script type="text/javascript" src="scripts/getvar.min.js"></script>
