--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html data-page="home">
 <head>
    <title>ACover - Assignment Cover</title>
    <meta http-equiv="content-type" content="text/html; charset=utf-8">
@@ -67,11 +67,14 @@
             <div>
                 <i><input required="" type="text" name="sn"><label>Student Name</label></i>
                 <div class="combo">
-                    <span id="swap">Code</span>
-                    <i><input id="swaptarget" required="" type="text" name="sc"><label>Student Code</label></i>
+                    <span id="swap1">Code</span>
+                    <i><input id="swaptarget1" required="" type="text" name="sc"><label>Student Code</label></i>
                 </div>
-                <i><input required="" type="text" name="sb"><label>Student Batch</label></i>
-                <i><input required="" type="text" name="ss"><label>Course Section</label></i>
+                <div class="combo">
+                    <span id="swap2">Batch</span>
+                    <i><input id="swaptarget2" required="" type="text" name="sb"><label>Student Batch</label></i>
+                </div>
+                <i><input type="text" name="ss"><label>Student Section</label></i>
             </div>
             <div>
                 <i><input required="" type="text" name="sd"><label>Date of Submission</label></i>
