--- a/print.html
+++ b/print.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html data-page="print">
 <head>
    <title>Assignment Cover</title>
    <meta http-equiv="content-type" content="text/html; charset=utf-8">
@@ -64,7 +64,8 @@
         <span name="sr" title="Student Roll No."></span>
         <div>
             <span name="sb" title="Student Batch"></span>
-            <span name="ss" title="Course Section"></span>
+            <span name="in" title="Student Intake"></span>
+            <span name="ss" title="Section"></span>
         </div>
         <span name="sd" title="Date of Submission"></span>
         <span name="dn" title="Department Name"></span>
