--- a/print.html
+++ b/print.html
@@ -23,6 +23,7 @@
    <meta name="theme-color" content="#070b0c">
    <meta name="darkreader-lock">
 
+   <!-- <link rel="stylesheet" type="text/css" href="styles/fontasm.min.css"> -->
    <link rel="stylesheet" type="text/css" href="styles/ptserif.min.css">
    <link rel="stylesheet" type="text/css" href="styles/cascadiacode.min.css">
    <!-- <link rel="stylesheet" type="text/css" href="styles/main.css"> -->
