variable loading fix

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <span id="generate">Generate</span>
         </footer>
     </content>
+    <script type="text/javascript" src="scripts/home.min.js"></script>
     <script type="text/javascript" src="scripts/getvar.min.js"></script>
-    <script type="text/javascript" src="scripts/home.js"></script>
 </body>
 </html>
