integrated pdfmake.js

--- a/print.html
+++ b/print.html
@@ -43,6 +43,9 @@
    <meta name="twitter:title" content="ACover">
    <meta name="twitter:image" content="https://naeembolchhi.github.io/acover/app/twitter.png?20241122211704">
    <meta name="twitter:card" content="summary_large_image">
+
+   <script type="text/javascript" src="lib/pdfmake.min.js"></script>
+   <script type="text/javascript" src="lib/vfs_fonts.min.js"></script>
 </head>
 <body>
     <content>
@@ -73,6 +76,7 @@
         <span name="un" title="University Name"></span>
     </content>
     <span class="no-select" id="print">Print to PDF</span>
+    <span class="no-select" id="download">Download as PDF</span>
     <script type="text/javascript" src="scripts/getvar.min.js"></script>
     <script type="text/javascript" src="scripts/print.min.js"></script>
 </body>
