double line support in course title

--- a/print.html
+++ b/print.html
@@ -49,9 +49,10 @@
 </head>
 <body>
     <content>
-        <div>
+        <div class="c-title">
             <span name="cc" title="Course Code"></span>
             <span name="cn" title="Course Name"></span>
+            <span name="cc-cn" title="Course Code and Name"></span>
         </div>
         <div>
             <span name="tn" title="Teacher Name"></span>
