--- a/print.html
+++ b/print.html
@@ -23,7 +23,7 @@
    <meta name="theme-color" content="#070b0c">
    <meta name="darkreader-lock">
 
-   <!-- <link rel="stylesheet" type="text/css" href="styles/fontasm.min.css"> -->
+   <link rel="stylesheet" type="text/css" href="styles/fontasm.min.css">
    <link rel="stylesheet" type="text/css" href="styles/ptserif.min.css">
    <link rel="stylesheet" type="text/css" href="styles/cascadiacode.min.css">
    <!-- <link rel="stylesheet" type="text/css" href="styles/main.css"> -->
@@ -76,6 +76,7 @@
         <span name="dn" title="Department Name"></span>
         <span name="un" title="University Name"></span>
     </content>
+    <span class="no-select" id="return"><i class="fa fa-return"></i></i></span>
     <span class="no-select" id="print">Print to PDF</span>
     <span class="no-select" id="download">Download as PDF</span>
     <script type="text/javascript" src="scripts/getvar.min.js"></script>
